# pdf-mangler

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yaml
mangler/: mangler.py
pdf_mangler/: __main__.py  defaults.yaml  mangler.py  pdf_ops.py  text.py  text_utils.py
pdf_mangler/fonts/: utils.py
tests/: F216  sample_font  signconf_font_0  test_font  test_fonts.py  test_mangler.py  test_stream  test_text.py  weird_stream.txt
tests/proprietary/: mangle_all.py
