[metadata]
name = pdf_mangler
version = 0.0.1

[options]
packages = pdf_mangler
include_package_data = True

install_requires =
    pikepdf
    tqdm

[options.extras_require]
dev =
    pytest
    pre-commit
    blacks

[options.entry_points]
console_scripts =
    pdf-mangler = pdf_mangler.mangler:main